--- a/README
+++ b/README
@@ -18,24 +18,5 @@ Note that you cannot assume that the airports having 0 in-degree are the answer.
 There might be an isolated cycle among airports. They all have 1 in-degree, but
 they are not reachable from outside.
 
-
-Input:
-airports = {
-"BGI", "CDG", "DEL", "DOH", "DSM", "EWR", "EYW", "HND", "ICN",
-"JFK", "LGA", "LHR", "ORD", "SAN", "SFO", "SIN", "TLV", "BUD" };
-
-routes =
- {
- {"DSM", "ORD"}, {"ORD", "BGI"}, {"BGI", "LGA"}, {"SIN", "CDG"},
- {"CDG", "SIN"}, {"CDG", "BUD"}, {"DEL", "DOH"}, {"DEL", "CDG"}, {"TLV", "DEL"},
- {"EWR", "HND"}, {"HND", "ICN"}, {"HND", "JFK"}, {"ICN", "JFK"}, {"JFK", "LGA"},
- {"EYW", "LHR"}, {"LHR", "SFO"}, {"SFO", "SAN"}, {"SFO", "DSM"}, {"SAN", "EYW"}
- };
- 
- startingAirport = "LGA";
-
- Find out how many routes you will need to create to ensure you can travel all airports.
- Answer: 3
-
- The following code will also give what routes they are:
- Add lines from LGA to [LHR,TLV,EWR].
+Illustration can be found in:
+https://docs.google.com/document/d/11B_7RCB3KZ3d__QyArGtJCdA9lq-CFeYlZHFqppxoYk/edit?usp=sharing
